--- a/depictions/web/screenshots.html
+++ b/depictions/web/screenshots.html
@@ -104,7 +104,7 @@
 			}
 	}
     $( document ).ready(function() {
-        $.ajax({type: "GET", dataType: "xml",url : ("depictions/web/repo.xml"),cache: false,
+        $.ajax({type: "GET", dataType: "xml",url : ("./depictions/web/repo.xml"),cache: false,
             success : function(xml){
 				data_loader_engine(repoContents,xml);
 				if (navigator.userAgent.search(/Cydia/) != -1) {
